styled form to be responsive

--- a/media-links.html
+++ b/media-links.html
@@ -218,8 +218,8 @@
           </fieldset>
           <fieldset>
             <div class="checkbox-buttons">
+              <label for="road">Books</label>
               <div>
-                <label for="road">Books</label>
                 <input
                   type="checkbox"
                   name="media-choice"
@@ -228,8 +228,10 @@
                   required
                 />
               </div>
+            </div>
+            <div class="checkbox-buttons">
+              <label for="media-choice-film">Films</label>
               <div>
-                <label for="media-choice-film">Films</label>
                 <input
                   type="checkbox"
                   name="media-choice"
@@ -238,8 +240,10 @@
                   required
                 />
               </div>
+            </div>
+            <div class="checkbox-buttons">
+              <label for="media-choice-doc">Documentaries</label>
               <div>
-                <label for="media-choice-doc">Documentaries</label>
                 <input
                   type="checkbox"
                   name="media-choice"
@@ -250,7 +254,7 @@
               </div>
             </div>
           </fieldset>
-          <button type="submit" class="join-button">Submit</button>
+          <button type="submit" class="button">Submit</button>
         </form>
       </section>
     </main>
