--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
           </div>
         </div>
         <div class="hero-header-text">
-          The greatest raid of all time, that i bet you haven't heard about….
-          Code name operation chariot
+          Want to hear about the Greatest Raid of all time….
         </div>
       </section>
 
