--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
         <div class="hero-header-text">
           Want to hear about the Greatest Raid of all time….
         </div>
+        <i class="fa-solid fa-angles-down hero-down-arrow"></i>
       </section>
 
       <article class="index-main">
