changes made when validating

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <main>
       <!-- main top image  -->
       <section class="hero">
+        <h2 style="display: none">hero slider</h2>
         <div class="slide-show-container">
           <div class="wrapper-one">
             <div class="wrapper-text">
@@ -323,7 +324,6 @@
             <img
               src="assets/images/operation-chariot-memorial-closeup.webp"
               alt="Elephant at sunset"
-              width="100%"
               class="st-nazaire-memorial-img"
             />
             <figcaption class="st-nazaire-memorial-caption">
@@ -336,8 +336,10 @@
     </main>
     <!-- footer -->
     <footer>
+      <h2 style="display: none">website footer</h2>
       <!-- footer external links -->
       <section class="footer-section">
+        <h2 style="display: none">website footer external links</h2>
         <a
           class="footer-external"
           target="_blank"
@@ -353,6 +355,7 @@
         >
       </section>
       <section class="footer-section">
+        <h2 style="display: none">website footer external links</h2>
         <a
           class="footer-external"
           target="_blank"
@@ -369,6 +372,7 @@
         >
       </section>
       <section class="footer-section">
+        <h2 style="display: none">website footer external links</h2>
         <a
           class="footer-external"
           target="_blank"
@@ -379,7 +383,6 @@
           <img
             src="assets/images/history-hit.png"
             alt="history hit logo"
-            width="100%"
             style="padding: 0rem 4rem"
             class="footer-external-img-history"
           />Dan Snow's History Hit</a
