changes made when validating gallery

--- a/gallery.html
+++ b/gallery.html
@@ -331,8 +331,10 @@
     </main>
     <!-- footer -->
     <footer>
+      <h2 style="display: none">website footer</h2>
       <!-- footer external links -->
       <section class="footer-section">
+        <h2 style="display: none">website footer external links</h2>
         <a
           class="footer-external"
           target="_blank"
@@ -348,6 +350,7 @@
         >
       </section>
       <section class="footer-section">
+        <h2 style="display: none">website footer external links</h2>
         <a
           class="footer-external"
           target="_blank"
@@ -364,6 +367,7 @@
         >
       </section>
       <section class="footer-section">
+        <h2 style="display: none">website footer external links</h2>
         <a
           class="footer-external"
           target="_blank"
@@ -374,7 +378,6 @@
           <img
             src="assets/images/history-hit.png"
             alt="history hit logo"
-            width="100%"
             style="padding: 0rem 4rem"
             class="footer-external-img-history"
           />Dan Snow's History Hit</a
