check all html pages for validation

--- a/gallery.html
+++ b/gallery.html
@@ -377,10 +377,10 @@
         >
           <img
             src="assets/images/history-hit.png"
-            alt="history hit logo"
-            style="padding: 0rem 4rem"
-            class="footer-external-img-history"
-          />Dan Snow's History Hit</a
+            alt=" top secret image of classfied documents"
+            class="footer-external-img-classified"
+          />
+          Dan Snow's History Hit</a
         >
       </section>
     </footer>
