--- a/media-links.html
+++ b/media-links.html
@@ -72,7 +72,6 @@
           <div class="youtube-documentary-video">
             <iframe
               src="https://www.youtube.com/embed/07Zd0Oy8JyQ"
-              frameborder="0"
               allowfullscreen
             ></iframe>
           </div>
@@ -93,12 +92,9 @@
           </a>
         </h4>
         <iframe
+          class="montgomery"
           title="interview with Lt Col R.K. Montgomery who took part in St Nazaire Raid"
-          frameborder="0"
-          scrolling="no"
           src="https://playlist.megaphone.fm/?e=FPMN8461578105&light=true&light=true"
-          width="100%"
-          alt="first hand account recording from Lt Col Montgomery who took part in the raid"
         ></iframe>
       </section>
       <!-- operation chariot book and link -->
@@ -192,7 +188,7 @@
         </figure>
       </section>
       <section>
-        <form id="signup" method="" action="">
+        <form id="signup">
           <h2>
             Sign up for <i class="fa-solid fa-book"></i> book and
             <i class="fa-solid fa-film"></i> film recommendations
@@ -218,7 +214,7 @@
           </fieldset>
           <fieldset>
             <div class="checkbox-buttons">
-              <label for="road">Books</label>
+              <label for="media-choice-book">Books</label>
               <div>
                 <input
                   type="checkbox"
@@ -260,8 +256,10 @@
     </main>
     <!-- footer -->
     <footer>
+      <h2 style="display: none">website footer</h2>
       <!-- footer external links -->
       <section class="footer-section">
+        <h2 style="display: none">website footer external links</h2>
         <a
           class="footer-external"
           target="_blank"
@@ -277,6 +275,7 @@
         >
       </section>
       <section class="footer-section">
+        <h2 style="display: none">website footer external links</h2>
         <a
           class="footer-external"
           target="_blank"
@@ -293,6 +292,7 @@
         >
       </section>
       <section class="footer-section">
+        <h2 style="display: none">website footer external links</h2>
         <a
           class="footer-external"
           target="_blank"
@@ -302,11 +302,10 @@
         >
           <img
             src="assets/images/history-hit.png"
-            alt="history hit logo"
-            width="100%"
-            style="padding: 0rem 4rem"
-            class="footer-external-img-history"
-          />Dan Snow's History Hit</a
+            alt=" top secret image of classfied documents"
+            class="footer-external-img-classified"
+          />
+          Dan Snow's History Hit</a
         >
       </section>
     </footer>
