--- a/media-links.html
+++ b/media-links.html
@@ -151,7 +151,7 @@
           <img
             src="assets/images/into-the-jaws-of-death-book.jpg"
             alt="Into the Jaws of Death: The True Story of the Legendary Raid on Saint-Nazaire"
-            class="st-nazaire-books-fig-img"
+            class="st-nazaire-books-fig-img order"
           />
           <figcaption class="st-nazaire-books-fig-review">
             <div class="style-test">
