styled subhead sections

--- a/media-links.html
+++ b/media-links.html
@@ -67,7 +67,7 @@
       <section class="youtube-documentary">
         <div class="youtube-documentary-innervid">
           <div class="youtube-documentary-head">
-            <h4>The Greatest Raid of All</h4>
+            <h4 class="subhead">The Greatest Raid of All</h4>
           </div>
           <div class="youtube-documentary-video">
             <iframe
@@ -81,8 +81,9 @@
       <!-- podcast and books -->
       <section class="podcast">
         <!-- first hand account podcast -->
-        <h4 class="podcast-header">
+        <h4 class="podcast-header subhead">
           <a
+            style="color: white"
             href="https://evergreenpodcasts.com/warriors-in-their-own-words/lt-col-r-k-montgomery-the-st-nazaire-raid"
             target="_blank"
             rel="noopener"
@@ -101,7 +102,7 @@
 
       <section class="st-nazaire-books">
         <div class="st-nazaire-books-head">
-          <h4>Looking for a good book?</h4>
+          <h4 class="subhead">Looking for a good book?</h4>
         </div>
         <figure class="st-nazaire-books-fig">
           <img
