styled subhead sections on gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -164,7 +164,7 @@
       </div>
       <!-- VC winners and citation -->
       <article class="vc-winners">
-        <h3 class="vc-winners-title">VC Winners</h3>
+        <h3 class="vc-winners-title subhead">VC Winners</h3>
         <section class="vc-winners-card">
           <img
             src="assets/images/willia-alfred-savage.png"
@@ -192,7 +192,8 @@
                 href="https://vcgca.org/our-people/profile/1465/william-alfred"
                 target="_blank"
                 rel="noopener"
-                >full citation</a
+                class="citation"
+                >Full Citation</a
               ></strong
             >
           </blockquote>
@@ -225,7 +226,8 @@
                 href="https://vcgca.org/our-people/profile/1687/robert-edward-dudley"
                 target="_blank"
                 rel="noopener"
-                >full citation</a
+                class="citation"
+                >Full Citation</a
               ></strong
             >
           </blockquote>
@@ -260,7 +262,8 @@
                 href="https://vcgca.org/our-people/profile/279/augustus-charles"
                 target="_blank"
                 rel="noopener"
-                >full citation</a
+                class="citation"
+                >Full Citation</a
               ></strong
             >
           </blockquote>
@@ -292,7 +295,8 @@
                 href="https://vcgca.org/our-people/profile/1555/thomas-frank"
                 target="_blank"
                 rel="noopener"
-                >full citation</a
+                class="citation"
+                >Full Citation</a
               ></strong
             >
           </blockquote>
@@ -322,6 +326,7 @@
                 href="https://vcgca.org/our-people/profile/1443/stephen-halden"
                 target="_blank"
                 rel="noopener"
+                class="citation"
                 >Full Citation</a
               ></strong
             >
