--- a/media-links.html
+++ b/media-links.html
@@ -83,7 +83,7 @@
         <!-- first hand account podcast -->
         <h4 class="podcast-header subhead">
           <a
-            style="color: white"
+            style="color: white; text-decoration: none"
             href="https://evergreenpodcasts.com/warriors-in-their-own-words/lt-col-r-k-montgomery-the-st-nazaire-raid"
             target="_blank"
             rel="noopener"
@@ -134,7 +134,6 @@
               <i class="fa-solid fa-quote-right"></i>
               <br />
               <br />
-              <br />
               <a
                 href="https://shop.nam.ac.uk/the-greatest-raid-st-nazaire-1942-the-heroic-story.html"
                 target="_blank"
@@ -173,7 +172,6 @@
               changed the course of the war.<i
                 class="fa-solid fa-quote-right"
               ></i>
-              <br />
               <br />
               <br />
               <a
