styled footer with new image

--- a/media-links.html
+++ b/media-links.html
@@ -138,7 +138,12 @@
                 href="https://shop.nam.ac.uk/the-greatest-raid-st-nazaire-1942-the-heroic-story.html"
                 target="_blank"
                 rel="noopener"
-                style="font-size: 2rem; float: right; color: white"
+                style="
+                  font-size: 2rem;
+                  float: right;
+                  color: white;
+                  text-decoration: underline;
+                "
                 aria-label="Visit this page to purchase a copy of the book (opens in a new tab)"
                 >Buy Now</a
               >
@@ -178,7 +183,12 @@
                 href="https://www.bookwiseonline.co.uk/into-the-jaws-of-death-3090-p.asp"
                 target="_blank"
                 rel="noopener"
-                style="font-size: 2rem; float: right; color: white"
+                style="
+                  font-size: 2rem;
+                  float: right;
+                  color: white;
+                  text-decoration: underline;
+                "
                 aria-label="Visit this page to purchase a copy of the book (opens in a new tab)"
                 >Buy Now</a
               >
