corrected footer image name

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
           href="https://www.navy.gov.au/sites/default/files/documents/Battle_Summary_12.pdf"
         >
           <img
-            src="assets/images/pngaaa.com-2512701.png"
+            src="assets/images/top-secrect.png"
             alt=" top secret image of classfied documents"
             class="footer-external-imgs"
             style="margin-top: -2rem"
