added hober effect to image fotoer

--- a/media-links.html
+++ b/media-links.html
@@ -279,26 +279,11 @@
           <img
             src="assets/images/reversed-r-red.svg"
             alt="logo of St Nazaire website"
-            class="footer-external-img-town"
-          />Visit St Nazaire</a
-        >
-      </section>
-      <section class="footer-section">
-        <h2 style="display: none">website footer external links</h2>
-        <a
-          class="footer-external"
-          target="_blank"
-          rel="noopener"
-          aria-label="Visit this page to view the Declassifeid documents about the battle (opens in a new tab)"
-          href="https://www.navy.gov.au/sites/default/files/documents/Battle_Summary_12.pdf"
-        >
-          <img
-            src="assets/images/top-secrect.png"
-            alt=" top secret image of classfied documents"
-            class="footer-external-img-classified"
+            class="footer-external-imgs"
+            style="margin-top: -2rem"
           />
-          Declassifeid war Documents</a
-        >
+          <p class="footer-external-text">Visit St Nazaire</p>
+        </a>
       </section>
       <section class="footer-section">
         <h2 style="display: none">website footer external links</h2>
@@ -312,10 +297,29 @@
           <img
             src="assets/images/history-hit.png"
             alt=" top secret image of classfied documents"
-            class="footer-external-img-classified"
+            class="footer-external-imgs"
+            style="max-width: 100%; padding-top: 1rem"
           />
-          Dan Snow's History Hit</a
+          <p class="footer-external-text">Dan Snow's History Hit</p>
+        </a>
+      </section>
+      <section class="footer-section">
+        <h2 style="display: none">website footer external links</h2>
+        <a
+          class="footer-external"
+          target="_blank"
+          rel="noopener"
+          aria-label="Visit this page to view the Declassifeid documents about the battle (opens in a new tab)"
+          href="https://www.navy.gov.au/sites/default/files/documents/Battle_Summary_12.pdf"
         >
+          <img
+            src="assets/images/top-secrect.png"
+            alt=" top secret image of classfied documents"
+            class="footer-external-imgs"
+            style="margin-top: -2rem"
+          />
+          <p class="footer-external-text">Declassifeid war Documents</p>
+        </a>
       </section>
     </footer>
     <!-- fontawesome icons -->
