accessibility changes added to all pages

--- a/gallery.html
+++ b/gallery.html
@@ -32,7 +32,13 @@
       <!-- nav bar for mobile -->
       <div class="mobile-navbar">
         <div class="container mobile-navbar-container">
-          <input class="checkbox" type="checkbox" name="nav-mobile-checkbox" />
+          <label for="header-checkbox"></label>
+          <input
+            id="header-checkbox"
+            class="checkbox"
+            type="checkbox"
+            name="nav-mobile-checkbox"
+          />
           <div class="hamburger">
             <i class="fa-solid fa-bars"></i>
           </div>
@@ -43,8 +49,8 @@
               id="mobile-navlinks-logo"
             />
             <ul style="height: 40rem">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="gallery.html" class="active">Gallery</a></li>
+              <li><a href="index.html" class="active">Home</a></li>
+              <li><a href="gallery.html">Gallery</a></li>
               <li><a href="media-links.html">Mutli Media</a></li>
             </ul>
           </nav>
@@ -53,8 +59,8 @@
       <!-- nav bar for non mobile -->
       <nav class="lg-screen-navbar">
         <ul id="navlinks">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="gallery.html" class="active">Gallery</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
           <li><a href="media-links.html">Mutli Media</a></li>
         </ul>
       </nav>
@@ -344,7 +350,7 @@
           class="footer-external"
           target="_blank"
           rel="noopener"
-          aria-label="Visit this page to visit the St Nazaire town website (opens in a new tab)"
+          aria-label="the link takes you to the offical St Nazaire town website (opens in a new tab)"
           href="https://www.saint-nazaire-tourisme.uk/explore/discover-our-heritage/war-and-peace-stories/"
         >
           <img
@@ -362,7 +368,7 @@
           class="footer-external"
           target="_blank"
           rel="noopener"
-          aria-label="Visit this page to listen to a a documentary on St Nazaire  (opens in a new tab)"
+          aria-label="The link takes you to a documentary on St Nazaire  (opens in a new tab)"
           href="https://shows.acast.com/dansnowshistoryhit/episodes/destroying-a-nazi-stronghold-the-st-nazaire-raid"
         >
           <img
@@ -380,7 +386,7 @@
           class="footer-external"
           target="_blank"
           rel="noopener"
-          aria-label="Visit this page to view the Declassifeid documents about the battle (opens in a new tab)"
+          aria-label="the link takes you to a page containing Declassifeid documents about the battle (opens in a new tab)"
           href="https://www.navy.gov.au/sites/default/files/documents/Battle_Summary_12.pdf"
         >
           <img
