accessibility changes made to external links

--- a/media-links.html
+++ b/media-links.html
@@ -77,6 +77,7 @@
           </div>
           <div class="youtube-documentary-video">
             <iframe
+              title="Jeremy Clarkson's the Greatest Raid of All"
               src="https://www.youtube.com/embed/07Zd0Oy8JyQ"
               allowfullscreen
             ></iframe>
@@ -93,7 +94,7 @@
             href="https://evergreenpodcasts.com/warriors-in-their-own-words/lt-col-r-k-montgomery-the-st-nazaire-raid"
             target="_blank"
             rel="noopener"
-            aria-label="Visit this page to see the srouce of the podcast (opens in a new tab)"
+            aria-label="link takes you to the source of the podcast (opens in a new tab)"
           >
             Lt Col R.K. Montgomery: The St. Nazaire Raid
           </a>
@@ -150,7 +151,7 @@
                   color: white;
                   text-decoration: underline;
                 "
-                aria-label="Visit this page to purchase a copy of the book (opens in a new tab)"
+                aria-label="link takes you to a page where you can purchase a copy of the book (opens in a new tab)"
                 >Buy Now</a
               >
             </div>
@@ -195,7 +196,7 @@
                   color: white;
                   text-decoration: underline;
                 "
-                aria-label="Visit this page to purchase a copy of the book (opens in a new tab)"
+                aria-label="link takes you to a page where you can purchase a copy of the book (opens in a new tab)"
                 >Buy Now</a
               >
             </div>
