changes made to improve accessibillity

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
       <!-- nav bar for mobile -->
       <div class="mobile-navbar">
         <div class="container mobile-navbar-container">
-          <label for="header-checkbox"></label>
+          <label for="header-checkbox" style="display: none"
+            >mobile header checkbox</label
+          >
           <input
             id="header-checkbox"
             class="checkbox"
@@ -350,7 +352,7 @@
           class="footer-external"
           target="_blank"
           rel="noopener"
-          aria-label="the link takes you to the offical St Nazaire town website (opens in a new tab)"
+          aria-label="Visit St Nazaire link to the offical town website (opens in a new tab)"
           href="https://www.saint-nazaire-tourisme.uk/explore/discover-our-heritage/war-and-peace-stories/"
         >
           <img
@@ -360,6 +362,7 @@
             style="margin-top: -2rem"
           />
           <p class="footer-external-text">Visit St Nazaire</p>
+          s
         </a>
       </section>
       <section class="footer-section">
@@ -368,7 +371,7 @@
           class="footer-external"
           target="_blank"
           rel="noopener"
-          aria-label="The link takes you to a documentary on St Nazaire  (opens in a new tab)"
+          aria-label="Dan Snow's History Hit documentary link about St Nazaire raid  (opens in a new tab)"
           href="https://shows.acast.com/dansnowshistoryhit/episodes/destroying-a-nazi-stronghold-the-st-nazaire-raid"
         >
           <img
@@ -386,7 +389,7 @@
           class="footer-external"
           target="_blank"
           rel="noopener"
-          aria-label="the link takes you to a page containing Declassifeid documents about the battle (opens in a new tab)"
+          aria-label="Declassifeid war Documents link takes you to the Declassifeid documents about the battle (opens in a new tab)"
           href="https://www.navy.gov.au/sites/default/files/documents/Battle_Summary_12.pdf"
         >
           <img
