correted hero section

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="hero-header-text">
           Want to hear about the Greatest Raid of all time….
         </div>
-        <i class="fa-solid fa-angles-down hero-down-arrow"></i>
+        <!-- <i class="fa-solid fa-angles-down hero-down-arrow"></i> -->
       </section>
 
       <article class="index-main">
