all images changed to .webp file format

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <h1>The St Nazaire Raid - Operation Chariot</h1>
         <section class="st-nazaire-main-content">
           <img
-            src="assets/images/tirpitz.jpg"
+            src="assets/images/tirpitz.webp"
             alt="image of Tirpitz"
             class="tirpitz"
           />
@@ -155,7 +155,7 @@
         </section>
         <section class="st-nazaire-main-content">
           <img
-            src="assets/images/detailed-map-plan.JPG"
+            src="assets/images/detailed-map-plan.webp"
             alt="detailed map plan of the battle"
             class="mapplan-detailed"
           />
@@ -209,7 +209,7 @@
               dock gates if the Campbeltown failed to reach its target.
             </p>
             <img
-              src="assets/images/st-Nazaire-mockup.png"
+              src="assets/images/st-Nazaire-mockup.webp"
               alt="mock up module of the dock"
               class="mock-up"
             />
@@ -217,7 +217,7 @@
         </section>
         <section class="st-nazaire-main-content">
           <img
-            src="assets/images/comando-battle-plan.JPG"
+            src="assets/images/comando-battle-plan.webp"
             alt="battle plan for commandos once landed"
             class="mapplan-detailed"
           />
