--- a/media-links.html
+++ b/media-links.html
@@ -115,7 +115,7 @@
         </div>
         <figure class="st-nazaire-books-fig">
           <img
-            src="assets/images/the-greatest-raid-book.jpg"
+            src="assets/images/the-greatest-raid-book.webp"
             alt="The Greatest Raid: St Nazaire, 1942: The Heroic Story of Operation Chariot"
             class="st-nazaire-books-fig-img"
           />
@@ -163,7 +163,7 @@
         <!-- into jaws of death book and link -->
         <figure class="st-nazaire-books-fig">
           <img
-            src="assets/images/into-the-jaws-of-death-book.jpg"
+            src="assets/images/into-the-jaws-of-death-book.webp"
             alt="Into the Jaws of Death: The True Story of the Legendary Raid on Saint-Nazaire"
             class="st-nazaire-books-fig-img order"
           />
