--- a/gallery.html
+++ b/gallery.html
@@ -76,7 +76,7 @@
         <!-- first colum -->
         <div class="column">
           <img
-            src="assets/images/aerial-reconnaissance.jpg"
+            src="assets/images/aerial-reconnaissance.webp"
             alt="aerial reconnaissance of St Nazaire"
             style="width: 100%"
             class="myDIV"
@@ -85,12 +85,12 @@
             I am shown when someone hovers over the div above.
           </div>
           <img
-            src="assets/images/caputred-commandos-2.jpg"
+            src="assets/images/caputred-commandos-2.webp"
             alt="caputred commando soliders after the raid"
             style="width: 100%"
           />
           <img
-            src="assets/images/caputred-commandos.jpg"
+            src="assets/images/caputred-commandos.webp"
             alt="caputred commando soliders after the raid"
             style="width: 100%"
           />
@@ -103,7 +103,7 @@
             style="width: 100%"
           />
           <img
-            src="assets/images/hms-campbeltown-wedged-in-dock.jpg"
+            src="assets/images/hms-campbeltown-wedged-in-dock.webp"
             alt="HMS campbeltown wedged into the dock"
             style="width: 100%"
           />
@@ -121,7 +121,7 @@
         <!-- third colum -->
         <div class="column">
           <img
-            src="assets/images/st-nazaire-aftermath.jpg"
+            src="assets/images/st-nazaire-aftermath.webp"
             alt="aerial photo of the aftermath of the raid"
             style="width: 100%"
           />
@@ -136,7 +136,7 @@
             style="width: 100%"
           />
           <img
-            src="assets/images/st-nazaire-hms-campbeltown-3.jpg"
+            src="assets/images/st-nazaire-hms-campbeltown-3.webp"
             alt="HMS Campbeltown from another angle wedged in dock"
             style="width: 100%"
           />
@@ -154,17 +154,17 @@
             style="width: 100%"
           />
           <img
-            src="assets/images/german-troops-next-day.jpg"
+            src="assets/images/german-troops-next-day.webp"
             alt="german troops clearing St Nazaire next day"
             style="width: 100%"
           />
           <img
-            src="assets/images/motorboat.jpg"
+            src="assets/images/motorboat.webp"
             alt="Motorboat used in the raid"
             style="width: 100%"
           />
           <img
-            src="assets/images/german-tirptz.png"
+            src="assets/images/german-tirptz.webp"
             alt="picture of tirptz from the air"
             style="width: 100%"
           />
@@ -175,7 +175,7 @@
         <h2 class="vc-winners-title subhead">VC Winners</h2>
         <section class="vc-winners-card">
           <img
-            src="assets/images/willia-alfred-savage.png"
+            src="assets/images/willia-alfred-savage.webp"
             alt="image of VC winner William Alfred SAVAGE"
           />
           <h3 class="vc-winners-card-title">William Alfred SAVAGE</h3>
@@ -208,7 +208,7 @@
         </section>
         <section class="vc-winners-card">
           <img
-            src="assets/images/robert-edward-dudley-ryder.png"
+            src="assets/images/robert-edward-dudley-ryder.webp"
             alt="vc winner Robert Edward Dudley RYDER"
           />
           <h3 class="vc-winners-card-title">Robert Edward Dudley RYDER</h3>
@@ -278,7 +278,7 @@
         </section>
         <section class="vc-winners-card">
           <img
-            src="assets/images/thomas-frank-durrant.png"
+            src="assets/images/thomas-frank-durrant.webp"
             alt="vc winner Thomas Frank DURRANT.png"
           />
           <h3 class="vc-winners-card-title">Thomas Frank DURRANT</h3>
@@ -311,7 +311,7 @@
         </section>
         <section class="vc-winners-card">
           <img
-            src="assets/images/stephen-halden-beattie.png"
+            src="assets/images/stephen-halden-beattie.webp"
             alt="vc winner Stephen Halden BEATTIE"
           />
           <h3 class="vc-winners-card-title">Stephen Halden BEATTIE</h3>
