correcting footer title

--- a/gallery.html
+++ b/gallery.html
@@ -366,7 +366,7 @@
         </a>
       </section>
       <section class="footer-section">
-        <h2 style="display: none">website footer external links</h2>
+        <h2 style="display: none">Website Footer External links</h2>
         <a
           class="footer-external"
           target="_blank"
