hover effected added to vc citation

--- a/gallery.html
+++ b/gallery.html
@@ -200,7 +200,7 @@
                 href="https://vcgca.org/our-people/profile/1465/william-alfred"
                 target="_blank"
                 rel="noopener"
-                class="citation"
+                class="citation hov-effect"
                 >Full Citation</a
               ></strong
             >
@@ -234,7 +234,7 @@
                 href="https://vcgca.org/our-people/profile/1687/robert-edward-dudley"
                 target="_blank"
                 rel="noopener"
-                class="citation"
+                class="citation hov-effect"
                 >Full Citation</a
               ></strong
             >
@@ -270,7 +270,7 @@
                 href="https://vcgca.org/our-people/profile/279/augustus-charles"
                 target="_blank"
                 rel="noopener"
-                class="citation"
+                class="citation hov-effect"
                 >Full Citation</a
               ></strong
             >
@@ -303,7 +303,7 @@
                 href="https://vcgca.org/our-people/profile/1555/thomas-frank"
                 target="_blank"
                 rel="noopener"
-                class="citation"
+                class="citation hov-effect"
                 >Full Citation</a
               ></strong
             >
@@ -334,7 +334,7 @@
                 href="https://vcgca.org/our-people/profile/1443/stephen-halden"
                 target="_blank"
                 rel="noopener"
-                class="citation"
+                class="citation hov-effect"
                 >Full Citation</a
               ></strong
             >
