--- a/gallery.html
+++ b/gallery.html
@@ -349,7 +349,6 @@
           class="footer-external"
           target="_blank"
           rel="noopener"
-          aria-label="Visit St Nazaire link to the offical town website (opens in a new tab)"
           href="https://www.saint-nazaire-tourisme.uk/explore/discover-our-heritage/war-and-peace-stories/"
         >
           <img
@@ -363,12 +362,11 @@
         </a>
       </section>
       <section class="footer-section">
-        <h2 style="display: none">Website Footer External links</h2>
+        <h2 style="display: none">website footer external links</h2>
         <a
           class="footer-external"
           target="_blank"
           rel="noopener"
-          aria-label="Dan Snow's History Hit documentary link about St Nazaire raid  (opens in a new tab)"
           href="https://shows.acast.com/dansnowshistoryhit/episodes/destroying-a-nazi-stronghold-the-st-nazaire-raid"
         >
           <img
@@ -386,7 +384,6 @@
           class="footer-external"
           target="_blank"
           rel="noopener"
-          aria-label="Declassifeid war Documents link takes you to the Declassifeid documents about the battle (opens in a new tab)"
           href="https://www.navy.gov.au/sites/default/files/documents/Battle_Summary_12.pdf"
         >
           <img
