corrected mobile nav label and input name

--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
       <!-- nav bar for mobile -->
       <div class="mobile-navbar">
         <div class="container mobile-navbar-container">
-          <label for="header-checkbox" style="display: none"
+          <label for="nav-mobile-checkbox" style="display: none"
             >mobile header checkbox</label
           >
           <input
-            id="header-checkbox"
-            class="checkbox"
+            id="nav-mobile-checkbox"
             type="checkbox"
             name="nav-mobile-checkbox"
           />
