updated and corercted alt tags on imgs

--- a/media-links.html
+++ b/media-links.html
@@ -304,7 +304,7 @@
         >
           <img
             src="assets/images/history-hit.png"
-            alt=" top secret image of classfied documents"
+            alt="History Hit Logo"
             class="footer-external-imgs"
             style="max-width: 100%; padding-top: 1rem"
           />
