--- a/gallery.html
+++ b/gallery.html
@@ -371,7 +371,7 @@
         >
           <img
             src="assets/images/history-hit.png"
-            alt=" top secret image of classfied documents"
+            alt="History Hit Logo"
             class="footer-external-imgs"
             style="max-width: 100%; padding-top: 1rem"
           />
