--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
           <figure class="st-nazaire-memorial">
             <img
               src="assets/images/operation-chariot-memorial-closeup.webp"
-              alt="Elephant at sunset"
+              alt="St Nazaire memorial close up"
               class="st-nazaire-memorial-img"
             />
             <figcaption class="st-nazaire-memorial-caption">
@@ -373,7 +373,7 @@
         >
           <img
             src="assets/images/history-hit.png"
-            alt=" top secret image of classfied documents"
+            alt="History Hit Logo"
             class="footer-external-imgs"
             style="max-width: 100%; padding-top: 1rem"
           />
