created sign up confirmation, fixed navbar

--- a/media-links.html
+++ b/media-links.html
@@ -206,7 +206,7 @@
         </figure>
       </section>
       <section>
-        <form id="signup">
+        <form id="signup" action="signup-confirmation.html">
           <h2>
             Sign up for <i class="fa-solid fa-book"></i> book and
             <i class="fa-solid fa-film"></i> film recommendations
